# itdepends

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
itdepends/: app.py  counters.py  rules.py  settings.py
itdepends/core/: audio_capture.py  counter.py  evaluation.py  html_writer.py  transcribe.py
